--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "client",
   "private": true,
-
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.2.6",
+    "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
