--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
