--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.7",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "js-cookie": "^3.0.1",
     "mongodb": "^5.1.0",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "pdfjs-dist": "^3.4.120",
+    "pdfobject": "^2.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.0",
     "react-tailwindcss-datepicker": "^1.4.2"
   },
