--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.11.0",
+    "@react-pdf-viewer/default-layout": "^3.11.0",
     "@react-pdf/renderer": "^3.1.7",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "js-cookie": "^3.0.1",
     "mongodb": "^5.1.0",
     "pdf-viewer-reactjs": "^2.2.3",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^3.3.122",
     "pdfobject": "^2.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
