--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pdftron/webviewer": "^8.12.0",
     "@react-pdf-viewer/core": "^3.11.0",
     "@react-pdf-viewer/default-layout": "^3.11.0",
-    "@react-pdf/renderer": "^3.1.7",
+    "@react-pdf/renderer": "^3.1.8",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "js-cookie": "^3.0.1",
     "mongodb": "^5.1.0",
+    "pdf-parse": "^1.1.1",
     "pdf-viewer-reactjs": "^2.2.3",
     "pdfjs-dist": "^3.3.122",
     "pdfobject": "^2.2.8",
