--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
     "bcrypt": "^5.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
+    "emailjs": "^4.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
