--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "pdfobject": "^2.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.0",
     "react-tailwindcss-datepicker": "^1.4.2"
