--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "csvtojson": "^2.0.10",
+    "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
     "mongodb": "^5.1.0",
     "papaparse": "^5.4.1",
